--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-resume.git"
     },
     "dependencies": {
-        "bootstrap": ">=4.1.2",
+        "bootstrap": "^4.3.1",
+        "brace": "^0.11.1",
+        "braces": "^2.3.2",
         "devicons": "^1.8.0",
         "jquery": "3.3.1",
         "simple-line-icons": "^2.4.1"
