--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
         "brace": "^0.11.1",
         "braces": "^2.3.2",
         "devicons": "^1.8.0",
-        "jquery": "3.3.1",
+        "jquery": "^3.4.1",
         "simple-line-icons": "^2.4.1"
     },
     "devDependencies": {
-        "browser-sync": "^2.26.3",
-        "gulp": "^4.0.0",
+        "browser-sync": "^2.26.7",
+        "gulp": "^4.0.2",
         "gulp-clean-css": "3.9.4",
         "gulp-header": "2.0.5",
         "gulp-rename": "^1.2.2",
